@@ -3,11 +3,14 @@
 export(covafill)
 export(covatree)
 export(cxxFlags)
+export(kde)
 export(loadJAGSModule)
 export(stat_covafill)
+export(suggestBandwith)
 exportClasses(covafill)
 exportClasses(covatree)
 importFrom(ggplot2,Stat)
 importFrom(ggplot2,ggproto)
+importFrom(ggplot2,layer)
 importFrom(methods,new)
 importFrom(methods,setRefClass)
