@@ -49,16 +49,24 @@ typename covafill<scalartype_>::vectortype covafill<scalartype_>::operator()(vec
 
   // Create (sparse) matrix of weights
   sparsematrixtype W(nobs,nobs);
+  vectortype kde(1);
+  kde(0) = scalartype(0.0);
   for(int i = 0; i < nobs; ++i){
     if(calcNorm(x0,coordinates.row(i)) > excludeRadius){
       scalartype wi = getWeight(x0,coordinates.row(i));
+      kde(0) += wi / nobs;
       if(wi > 0)
 	W.insert(i,i) = wi;
     }
   }
+  if(p == -1){
+    return kde;
+  }
 
   // Calculate (dense) design matrix for least squares (nobs x dim)
-  int lsdim = 1 + dim;
+  int lsdim = 1;
+  if( p >= 1)
+    lsdim += dim;
   if(p >= 2)
     lsdim += 0.5 * dim * (dim + 1);
   if(p >= 3)
@@ -70,8 +78,9 @@ typename covafill<scalartype_>::vectortype covafill<scalartype_>::operator()(vec
     // First is the intercept
     X(i,0) = 1.0;
     // Then (x-x0)
-    for(int j = 1; j < 1+dim; ++j)
-      X(i,j) = xtmp(j-1);
+    if(p >= 1)
+      for(int j = 1; j < 1+dim; ++j)
+	X(i,j) = xtmp(j-1);
     // Finally (x-x0)^T(x-x0) if p == 2; i.e. the interactions
     if(p >= 2){
       int indx = 1+dim;
@@ -89,6 +98,7 @@ typename covafill<scalartype_>::vectortype covafill<scalartype_>::operator()(vec
       }
     }
   }
+
 
   // Calculate weighted least squares estimates
   matrixtype XTW = X.transpose() * W;
@@ -109,7 +119,7 @@ typename covafill<scalartype_>::vectortype covafill<scalartype_>::operator()(vec
 
   if(returnAll)
     return beta;
-  return beta.segment(0,1+dim);
+  return beta.segment(0,1+dim*(p>0));
 };
 
 template<typename scalartype_>
@@ -126,16 +136,31 @@ typename covafill<scalartype_>::vecvectype covafill<scalartype_>::operator()(vec
   // Create (sparse) matrix of weights
   int NnotZero = 0;
   sparsematrixtype W(nobs,nobs);
+  vectortype kde(1);
+  kde(0) = scalartype(0.0);
+
   for(int i = 0; i < nobs; ++i){
       scalartype wi = getWeight(x0,coordinates.row(i));
+      kde(0) += wi / nobs;
       if(wi > 0){
 	W.insert(i,i) = wi;
 	NnotZero++;
     }
   }
 
+  if(p == -1){
+    vecvectype reskde(2);
+    reskde(0) = kde;
+    vectortype tmp(1);
+    tmp(0) = 0/0; // Not the best solution
+    reskde(1) = tmp;
+    return reskde;
+  }
+
   // Calculate (dense) design matrix for least squares (nobs x dim)
-  int lsdim = 1 + dim;
+  int lsdim = 1;
+  if(p >= 1)
+    lsdim += dim;
   if(p >= 2)
     lsdim += 0.5 * dim * (dim + 1);
   if(p >= 3)
@@ -147,8 +172,9 @@ typename covafill<scalartype_>::vecvectype covafill<scalartype_>::operator()(vec
     // First is the intercept
     X(i,0) = 1.0;
     // Then (x-x0)
-    for(int j = 1; j < 1+dim; ++j)
-      X(i,j) = xtmp(j-1);
+    if(p >= 1)
+      for(int j = 1; j < 1+dim; ++j)
+	X(i,j) = xtmp(j-1);
     // Finally (x-x0)^T(x-x0) if p == 2; i.e. the interactions
     if(p >= 2){
       int indx = 1+dim;
