@@ -104,8 +104,8 @@ covanode<scalartype_>::covanode(matrixtype coordSplit,
 
 template<typename scalartype_>
 covanode<scalartype_>::~covanode(){
-  delete left;
-  delete right;  
+  //delete left;
+  //delete right;  
 };
 
 #endif
