@@ -18,7 +18,8 @@ A Reference Class for Search Tree Approximated Local Polynomial Regression with 
 \describe{
 \item{\code{getDim()}}{Get the dimension of the coordinates.}
 
-\item{\code{initialize(coord, obs, h = 1, p = 2L, minLeft = length(obs)/10, ...)}}{Method to initialize the covafill. coord is a matrix of coordinates, obs is a vector of corresponding observations, h is a vector of bandwiths, p is the polynomial degree, and minLeft is the minimum number of observations that will create a sub tree.}
+\item{\code{initialize(coord, obs, h = suggestBandwith(coord, p), p = 3L,
+  minLeft = length(obs)/10, ...)}}{Method to initialize the covafill. coord is a matrix of coordinates, obs is a vector of corresponding observations, h is a vector of bandwiths, p is the polynomial degree, and minLeft is the minimum number of observations that will create a sub tree.}
 
 \item{\code{predict(coord)}}{Predict function value and first order derivatives with search tree approximated local polynomial regression at coord.}
 }}
